--- a/Comparium_Replica/Comparium_Index.html
+++ b/Comparium_Replica/Comparium_Index.html
@@ -6,16 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>COMPARIUM REPLICA - IMHIDAYAT</title>
     <link rel="stylesheet" href="../../1.bootstrap-5.2.0-dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="Comparium_Style.css" />
   </head>
   <body>
-    <header class="container-fluid bg-secondary text-white">
-      <div class="navbar row">
-        <h1 class="d-flex align-items-center fs-5 bg-warninga">
-          <img src="img/logo.svg" alt="Logo" class="me-2" width="40" />
-          Comparium
-        </h1>
-      </div>
-      <div class="row"></div>
+    <header>
+      <nav class="navbar navbar-expand-lg text-white bg-secondary">
+        <div class="container-fluid">
+          <h1 class="d-flex align-items-center fs-5">
+            <img src="img/logo.svg" alt="Logo" class="me-2" width="35" />
+            Comparium
+          </h1>
+          <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar_collapse">
+            <span class="navbar-toggler-icon"></span>
+            <!-- <span class="visually-hidden">Button Collapse</span> -->
+          </button>
+          <div class="row collapse navbar-collapse bg-light text-dark py-0" id="navbar_collapse">jjk</div>
+        </div>
+      </nav>
     </header>
   </body>
   <script src="../../1.bootstrap-5.2.0-dist/js/bootstrap.js"></script>
